--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,8 @@ services:
     environment:
       - MONGO_INITDB_ROOT_USERNAME=nahraf
       - MONGO_INITDB_ROOT_PASSWORD=FOSSIL
+    volumes:
+      - mongo-db:/data/db
+
+volumes:
+  mongo-db:
