--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-redis": "^7.1.1",
     "express": "^4.19.2",
-    "mongoose": "^8.6.1"
+    "express-session": "^1.18.0",
+    "mongoose": "^8.6.1",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
